# anihoin

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.en.md  README.ja.md  README.kr.md  README.md  README.zh.md  characters.json  danbooru_crawler.py  dataset.py  demo_gradio.py  export_onnx.py  finetune.py  index.html  main.py  model_loader.py  monitor.sh  preprocess_dataset.py  pyproject.toml  quantize.py  quantize_fp16.py  requirements.txt  start.bat  start.ps1  start.py  start.sh  studio_api.py  studio_cli.py  train.py  xpu_compat.py
.github/workflows/: ci.yml
crawling/: danbooru_crawler.py
debug_checkpoints/: class_map.json
docs/: README.ja.md  README.kr.md  intel_arc_setup.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: ImageModal.tsx  JobConsole.tsx  MetricsChart.tsx  StatusBadge.tsx  TagSearchInput.tsx  TrainingMonitor.tsx
frontend/src/i18n/: index.ts
frontend/src/i18n/locales/: en.json  ko.json
frontend/src/pages/: Crawl.tsx  Dataset.tsx  Export.tsx  Inference.tsx  Training.tsx
frontend/src/store/: jobStore.ts
pipeline/: README.md  release.sh  run_pipeline.sh
scripts/: sync_backend.py
segmentation/: __init__.py  crop_processor.py  face_detector.py  run_crop.py  sam_segmenter.py
studio/: characters.py  doctor.py
studio/jobs/: base_job.py  crawl_job.py  export_job.py  preprocess_job.py  seg_job.py  train_job.py
studio/routers/: characters.py  crawl.py  export.py  images.py  inference.py  labels.py  preprocess.py  segmentation.py  training.py
tests/: test_core.py  test_doctor.py  test_studio_cli.py  test_training_job.py  test_training_smoke.py
