[project]
name = "holoscope"
version = "0.1.0"
description = "Swin Transformer-Tiny 기반 홀로라이브 캐릭터 분류기"
requires-python =">=3.11,<3.12"
dependencies = [
    # 크롤러
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "pillow>=10.0.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    # 학습
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "triton-rocm==3.6.0 ; sys_platform == 'linux'",
    "timm>=0.9.12",
    "albumentations>=1.3.1",
    "numpy>=1.24.0",
    # API
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    # 추론 엔진 (CPU EP 기본 포함)
    "onnxruntime>=1.17.0",
    "onnxscript>=0.6.2",
    # 웹 UI
    "gradio>=4.0",
]

[project.optional-dependencies]
logging = ["wandb>=0.16.0"]
# Intel Arc GPU 학습 지원
# 설치: uv sync --extra arc
arc = [
    "intel-extension-for-pytorch>=2.3.0",
    "oneccl-bind-pt>=2.3.0",
]
# ROCm GPU 추론: onnxruntime 대신 onnxruntime-rocm 설치
# pip install onnxruntime-rocm  (onnxruntime과 충돌하므로 단독 사용)
# 실행 시: HSA_OVERRIDE_GFX_VERSION=11.0.0 uv run python main.py

[tool.uv.sources]
torch = [
    { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]
triton-rocm = { index = "pytorch-rocm" }
# Intel Arc XPU 전용 패키지
intel-extension-for-pytorch = { index = "pytorch-ipex" }
oneccl-bind-pt = { index = "pytorch-ipex" }

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm7.1"
explicit = true

[[tool.uv.index]]
name = "pytorch-ipex"
url = "https://pytorch-extension.intel.com/release-whl/stable/xpu/us/"
explicit = true
