[project]
name = "holoscope"
version = "0.1.0"
description = "Swin Transformer-Tiny 기반 홀로라이브 캐릭터 분류기"
requires-python =">=3.11,<3.12"
dependencies = [
    # 크롤러
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "pillow>=10.0.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "pytest>=8.0.0",
    # 학습 (torch는 --extra cuda/rocm/arc 중 하나로 설치)
    "timm>=0.9.12",
    "albumentations>=1.3.1",
    "numpy>=1.24.0",
    # API
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    # 추론 엔진
    "onnxruntime>=1.17.0",
    "onnxscript>=0.6.2",
    # 웹 UI
    "gradio>=4.0",
    # Studio
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
# GPU 백엔드 — 하나만 선택해서 설치
# uv sync --extra cuda    (NVIDIA, 기본 PyPI CUDA 빌드)
# uv sync --extra rocm    (AMD,    ROCm 빌드)
# uv sync --extra arc     (Intel Arc, XPU 빌드 + IPEX)
cuda = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
]
rocm = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "triton-rocm==3.6.0 ; sys_platform == 'linux'",
]
arc = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "triton-xpu ; sys_platform == 'linux'",
    # IPEX major.minor 은 torch major.minor 와 일치해야 함.
    # 버전 불일치 시 xpu_compat.py 가 import 전에 감지하고 건너뜀.
    "intel-extension-for-pytorch",
    "oneccl-bind-pt",
]
logging = ["wandb>=0.16.0"]
# 얼굴 감지/크롭 전처리 — uv sync --extra seg
seg = ["opencv-python-headless>=4.9"]

[tool.uv]
conflicts = [
    [{ extra = "cuda" }, { extra = "rocm" }, { extra = "arc" }],
]

[tool.uv.sources]
# torch / torchvision: extra에 따라 다른 인덱스에서 설치
torch = [
    { index = "pytorch-rocm", extra = "rocm", marker = "sys_platform == 'linux'" },
    { index = "pytorch-xpu",  extra = "arc",  marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-rocm", extra = "rocm", marker = "sys_platform == 'linux'" },
    { index = "pytorch-xpu",  extra = "arc",  marker = "sys_platform == 'linux'" },
]
triton-xpu                  = { index = "pytorch-xpu" }
triton-rocm                 = { index = "pytorch-rocm" }
intel-extension-for-pytorch = { index = "pytorch-ipex" }
oneccl-bind-pt              = { index = "pytorch-ipex" }

[[tool.uv.index]]
name = "pytorch-rocm"
url  = "https://download.pytorch.org/whl/rocm7.1"
explicit = true

[[tool.uv.index]]
name = "pytorch-xpu"
url  = "https://download.pytorch.org/whl/xpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-ipex"
url  = "https://pytorch-extension.intel.com/release-whl/stable/xpu/us/"
explicit = true
